             Suggested by Rickard Oberg.
        - Renamed RestletSolrQueryRequest to SolrRestletQueryRequest.
        - Renamed RestletSolrParams to SolrRestletParams.
        - Renamed Application#getRole() into findRole().
        - Added "next" property to Server and deprecated "target" for
          more naming consistency with filters.
        - Added conveniency constructors to Server.
      - Bugs fixed
        - Fixed bug when the deprecated method "createRoot" is 
          implemented instead of the "createInboundRoot".
          Reported by Fabian Mandelbaum.
        - ServerResource#getVariants() now returns an empty list
          instead of null when no annotation is present.
          Reported by Tal Liron.
        - Annotated methods returning a String, a StringRepresentation
          or a Reader were only exposing a "text/plain" variant even
          though most other media types are acceptable like JSON, XML.
        - Fixed bug in ServerResource when content negotiation was
          disabled, all non standard methods where invoking the OPTIONS
          method. 
        - Fixed ClientResource to throw ResourceException upon error
          as specified in Javadocs. Reported by Patrick Logan.
        - ClientResource was not checking the "followRedirects"
          property.
    - Enhancements
        - Improved JAXB converted. Contributed by Sanjay Acharya.
        - Upgraded Apache Commons Logging to version 1.1.1.
        - Added library jcip-annotations 1.0.
        - ServerSevlet now automatically supports the declaration of 
          several adapters in the same web.xml. Reworked the Javadocs
          to encourage usage of Servlet init parameters instead of
          context parameters.
        - Refactored connector extensions to move implementation 
          classes in "internal" packages hidden from the Javadocs.
        - Upgraded Jetty to version 7.0.0.
        - The default status page and directory listings are now using